--- a/public/javascripts/manifest.json
+++ b/public/javascripts/manifest.json
@@ -4,7 +4,7 @@
   "icons": [
     {}
   ],
-  "start_url": "/index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2"
