--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "binance": "^1.3.3",
+    "binance-api-node": "^0.8.20",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
+    "debug": "^4.1.1",
+    "ejs": "2.6.1",
     "express": "~4.16.0",
-    "http-errors": "~1.6.2",
+    "http-errors": "1.7.2",
+    "moment": "^2.24.0",
     "morgan": "~1.9.0",
-    "socket.io": "^2.2.0"
+    "node-binance-api": "^0.9.0",
+    "socket.io": "^2.2.0",
+    "websocket": "^1.0.28"
   }
 }
