--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "npm run serve",
+    "build": "npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets",
+    "serve": "node dist/app.js",
+    "watch-node": "nodemon dist/app.js",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "test": "jest --forceExit --coverage --verbose",
+    "watch-test": "npm run test -- --watchAll",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "build-sass": "node-sass src/public/stylesheets/style.scss dist/public/stylesheets/style.css",
+    "watch-sass": "node-sass -w src/public/stylesheets/style.scss dist/public/stylesheets/style.css",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "copy-static-assets": "ts-node copyStaticAssets.ts",
+    "debug": "npm run build && npm run watch-debug",
+    "serve-debug": "nodemon --inspect dist/app.js",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.3.6",
     "axios": "^0.18.0",
     "binance": "^1.3.3",
     "binance-api-node": "^0.8.20",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.3",
     "debug": "^4.1.1",
     "ejs": "2.6.1",
@@ -19,5 +36,27 @@
     "node-binance-api": "^0.9.0",
     "socket.io": "^2.2.0",
     "websocket": "^1.0.28"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/compression": "^0.0.36",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/debug": "^4.1.3",
+    "@types/ejs": "^2.6.3",
+    "@types/express": "^4.16.1",
+    "@types/http-errors": "^1.6.1",
+    "@types/moment": "^2.13.0",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^11.13.0",
+    "@types/shelljs": "^0.8.4",
+    "@types/socket.io": "^2.1.2",
+    "@types/websocket": "^0.0.40",
+    "concurrently": "^4.1.0",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.10",
+    "shelljs": "^0.8.3",
+    "ts-node": "^8.0.3",
+    "tslint": "^5.15.0",
+    "typescript": "^3.4.1"
   }
 }
