--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "~1.9.0",
     "node-binance-api": "^0.9.0",
     "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "websocket": "^1.0.28"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@types/node": "^11.13.0",
     "@types/shelljs": "^0.8.4",
     "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32",
     "@types/websocket": "^0.0.40",
     "concurrently": "^4.1.0",
     "node-sass": "^4.11.0",
