* 클라이언트쪽 ts 코드를 모두 js 로 변경 작업 진행 중

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,19 @@
 {
   "compilerOptions": {
+    "target": "esnext",
     "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es5",
-    "noImplicitAny": true,
+    //"strict": true,
+    "importHelpers": true,
     "moduleResolution": "node",
+    "noImplicitAny": false,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+
+    "esModuleInterop": true,
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "allowJs": true,
     "paths": {
       "*": [
         "node_modules/*",
@@ -17,5 +23,6 @@
   },
   "include": [
     "src/**/*"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
