--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build-sass": "node-sass src/public/stylesheets/style.scss dist/public/stylesheets/style.css",
     "watch-sass": "node-sass -w src/public/stylesheets/style.scss dist/public/stylesheets/style.css",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "copy-static-assets": "ts-node copyStaticAssets.ts",
+    "copy-static-assets": "node dist/copyStaticAssets.js",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/app.js",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
@@ -53,12 +53,17 @@
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
     "@types/websocket": "^0.0.40",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-runtime": "^6.26.0",
     "concurrently": "^4.1.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "shelljs": "^0.8.3",
+    "systemjs": "^3.1.1",
     "ts-node": "^8.0.3",
     "tslint": "^5.15.0",
-    "typescript": "^3.4.1"
+    "typescript": "^3.4.1",
+    "webpack": "^4.29.6"
   }
 }
