--- a/package.json
+++ b/package.json
@@ -15,16 +15,13 @@
     "build-sass": "node-sass src/public/stylesheets/style.scss dist/public/stylesheets/style.css",
     "watch-sass": "node-sass -w src/public/stylesheets/style.scss dist/public/stylesheets/style.css",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "copy-static-assets": "node dist/copyStaticAssets.js",
+    "copy-static-assets": "ts-node copyStaticAssets.ts",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/app.js",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
-    "@amcharts/amcharts4": "^4.3.6",
     "axios": "^0.18.0",
-    "binance": "^1.3.3",
-    "binance-api-node": "^0.8.20",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.3",
     "debug": "^4.1.1",
@@ -33,7 +30,6 @@
     "http-errors": "1.7.2",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
-    "node-binance-api": "^0.9.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "websocket": "^1.0.28"
@@ -53,17 +49,12 @@
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
     "@types/websocket": "^0.0.40",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.5",
-    "babel-runtime": "^6.26.0",
     "concurrently": "^4.1.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "shelljs": "^0.8.3",
-    "systemjs": "^3.1.1",
     "ts-node": "^8.0.3",
     "tslint": "^5.15.0",
-    "typescript": "^3.4.1",
-    "webpack": "^4.29.6"
+    "typescript": "^3.4.1"
   }
 }
