--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,13 @@
 {
   "compilerOptions": {
-    "target": "esnext",
     "module": "commonjs",
-    //"strict": true,
-    "importHelpers": true,
-    "moduleResolution": "node",
-    "noImplicitAny": false,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-
     "esModuleInterop": true,
+    "target": "es6",
+    "noImplicitAny": true,
+    "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
-    "allowJs": true,
     "paths": {
       "*": [
         "node_modules/*",
@@ -23,6 +17,5 @@
   },
   "include": [
     "src/**/*"
-  ],
-  "exclude": ["node_modules"]
+  ]
 }
