--- a/package.json
+++ b/package.json
@@ -35,26 +35,6 @@
     "websocket": "^1.0.28"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/compression": "^0.0.36",
-    "@types/cookie-parser": "^1.4.1",
-    "@types/debug": "^4.1.3",
-    "@types/ejs": "^2.6.3",
-    "@types/express": "^4.16.1",
-    "@types/http-errors": "^1.6.1",
-    "@types/moment": "^2.13.0",
-    "@types/morgan": "^1.7.35",
-    "@types/node": "^11.13.0",
-    "@types/shelljs": "^0.8.4",
-    "@types/socket.io": "^2.1.2",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/websocket": "^0.0.40",
-    "concurrently": "^4.1.0",
-    "node-sass": "^4.11.0",
-    "nodemon": "^1.18.10",
-    "shelljs": "^0.8.3",
-    "ts-node": "^8.0.3",
-    "tslint": "^5.15.0",
-    "typescript": "^3.4.1"
+    "nodemon": "^1.18.10"
   }
 }
