--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "1.7.2",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
+    "request": "^2.88.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "websocket": "^1.0.28"
